apps/bizpark/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bizpark-ingress
  namespace: bizpark
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bizpark-api
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bizpark-commerce-web
            port:
              number: 3004
